@@ -56,25 +56,30 @@ typedef struct _array_t
 {
 	size_t size;
 	size_t num_entries;
+	size_t increase;
 	array_node_t * nodes;
 	int sorted;
 	int condensed;
 	int flag;
 } array_t;
 
+/* Create a new, empty array of size SIZE */
 array_t * array_new(size_t size);
-void array_free(array_t * array);
+void free_array(array_t * array);
 
 void * array_get(array_t * array, size_t i);
 void array_put(array_t * array, size_t i, void * val);
+void array_push_back(array_t * array, void * val);
 size_t array_get_size(array_t * array);
 size_t array_get_numentries(array_t * array);
+void array_resize(array_t * array, size_t size);
 array_t * array_copy(array_t * array);
 array_t * array_merge(array_t * array1, array_t * array2, libcontain_cmp_func_t cmp_func);
 array_t * array_deep_copy(array_t * array, libcontain_copy_func_t array_valcopy_func);
 void array_condense(array_t * array);
 void array_sort(array_t * array, libcontain_cmp_func_t cmp_func);
 void * array_search(array_t * array, void * val, libcontain_cmp_func_t cmp_func);
+void array_set_default_increase(array_t * array, size_t increase);
 void array_foreach(array_t * array, libcontain_foreach_func_t array_foreach_func, void * data);
 
 #endif // _LIBCONTAIN_ARRAY_H
